// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-order-tax-id-input Defaults to type and number first 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input number="123456" type="eu_vat"></ce-tax-id-input>
</ce-order-tax-id-input>
`;

exports[`ce-order-tax-id-input Renders AU Tax Type 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input country="AU"></ce-tax-id-input>
</ce-order-tax-id-input>
`;

exports[`ce-order-tax-id-input Renders CA Tax Type 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input country="CA"></ce-tax-id-input>
</ce-order-tax-id-input>
`;

exports[`ce-order-tax-id-input Renders EU VAT Tax Type 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input country="DE"></ce-tax-id-input>
</ce-order-tax-id-input>
`;

exports[`ce-order-tax-id-input Renders UK VAT Tax Type 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input country="GB"></ce-tax-id-input>
</ce-order-tax-id-input>
`;

exports[`ce-order-tax-id-input renders 1`] = `
<ce-order-tax-id-input>
  <ce-tax-id-input></ce-tax-id-input>
</ce-order-tax-id-input>
`;
